--- a/pages/atrialFibrillationBleeding/atrialFibrillationBleeding.wxml
+++ b/pages/atrialFibrillationBleeding/atrialFibrillationBleeding.wxml
@@ -2,117 +2,200 @@
 <mp-form-page title="以下信息请根据本人实际情况填写或选择">
   <mp-form id="form">
     <mp-cells title="基本信息（多选）">
-      <mp-checkbox-group wx:if="{{mode == 'readonly'}}" prop="basicHealthy" multi="{{true}}" bindchange="onbasicHealthyChange">
-        <mp-checkbox wx:if="{{formData.basicHealthy.hypertension}}" disabled="true" checked="true" label="高血压 >= 160mmHg" value="hypertension"></mp-checkbox>
-        <mp-checkbox wx:else label="高血压 >= 160mmHg" disabled="true" value="hypertension"></mp-checkbox>
-        <mp-checkbox wx:if="{{formData.basicHealthy.stroke}}" disabled="true" checked="true" label="卒中史" value="stroke"></mp-checkbox>
-        <mp-checkbox wx:else label="卒中史" disabled="true" value="stroke"></mp-checkbox>
-        <mp-checkbox wx:if="{{formData.basicHealthy.overAge}}" disabled="true" checked="true" label="年龄>65岁" value="overAge"></mp-checkbox>
-        <mp-checkbox wx:else label="年龄>65岁" disabled="true" value="overAge"></mp-checkbox>
-      </mp-checkbox-group>
-      <mp-checkbox-group wx:else prop="basicHealthy" multi="{{true}}" bindchange="onbasicHealthyChange">
-        <mp-checkbox wx:if="{{formData.basicHealthy.hypertension}}" checked="true" label="高血压 >= 160mmHg" value="hypertension"></mp-checkbox>
-        <mp-checkbox wx:else label="高血压 >= 160mmHg" value="hypertension"></mp-checkbox>
-        <mp-checkbox wx:if="{{formData.basicHealthy.stroke}}" checked="true" label="卒中史" value="stroke"></mp-checkbox>
-        <mp-checkbox wx:else label="卒中史" value="stroke"></mp-checkbox>
-        <mp-checkbox wx:if="{{formData.basicHealthy.overAge}}" checked="true" label="年龄>65岁" value="overAge"></mp-checkbox>
-        <mp-checkbox wx:else label="年龄>65岁" value="overAge"></mp-checkbox>
-      </mp-checkbox-group>
+      <checkbox-group bindchange="onbasicHealthyChange">
+        <label class="weui-cell weui-check__label">
+          <view class="weui-cell__hd">
+            <checkbox disabled="{{mode == 'readonly'}}" value="hypertension" checked="{{formData.basicHealthy.hypertension}}" />
+          </view>
+          <view class="weui-cell__bd">高血压 >= 160mmHg</view>
+        </label>
+        <label class="weui-cell weui-check__label">
+          <view class="weui-cell__hd">
+            <checkbox disabled="{{mode == 'readonly'}}" value="stroke" checked="{{formData.basicHealthy.stroke}}" />
+          </view>
+          <view class="weui-cell__bd">卒中</view>
+        </label>
+        <label class="weui-cell weui-check__label">
+          <view class="weui-cell__hd">
+            <checkbox disabled="{{mode == 'readonly'}}" value="overAge" checked="{{formData.basicHealthy.overAge}}" />
+          </view>
+          <view class="weui-cell__bd">年龄>65岁</view>
+        </label>
+        <label class="weui-cell weui-check__label">
+          <view class="weui-cell__hd">
+            <checkbox value="none" disabled="{{mode == 'readonly'}}" checked="{{formData.basicHealthy.none}}" />
+          </view>
+          <view class="weui-cell__bd">以上皆无</view>
+        </label>
+      </checkbox-group>
     </mp-cells>
     <mp-cells title="肾功能异常（多选）">
-      <mp-checkbox-group wx:if="{{mode == 'readonly'}}" prop="abnormalkidneyFunction" multi="{{true}}" bindchange="onabnormalkidneyFunctionChange">
-        <mp-checkbox wx:if="{{formData.abnormalkidneyFunction.chronicDialysis}}" disabled="true" checked="true" label="慢性透析" value="chronicDialysis"></mp-checkbox>
-        <mp-checkbox wx:else label="慢性透析" disabled="true" value="chronicDialysis"></mp-checkbox>
-        <mp-checkbox wx:if="{{formData.abnormalkidneyFunction.kidneyTransplant}}" disabled="true" checked="true" label="肾移植" value="kidneyTransplant"></mp-checkbox>
-        <mp-checkbox wx:else label="肾移植" disabled="true" value="kidneyTransplant"></mp-checkbox>
-        <mp-checkbox wx:if="{{formData.abnormalkidneyFunction.serumCreatinine}}" disabled="true" checked="true" label="血清肌酐大>200umol/L" value="serumCreatinine"></mp-checkbox>
-        <mp-checkbox wx:else label="血清肌酐大>200umol/L" disabled="true" value="serumCreatinine"></mp-checkbox>
-      </mp-checkbox-group>
-      <mp-checkbox-group wx:else prop="abnormalkidneyFunction" multi="{{true}}" bindchange="onabnormalkidneyFunctionChange">
-        <mp-checkbox wx:if="{{formData.abnormalkidneyFunction.chronicDialysis}}" checked="true" label="慢性透析" value="chronicDialysis"></mp-checkbox>
-        <mp-checkbox wx:else label="慢性透析" value="chronicDialysis"></mp-checkbox>
-        <mp-checkbox wx:if="{{formData.abnormalkidneyFunction.kidneyTransplant}}" checked="true" label="肾移植" value="kidneyTransplant"></mp-checkbox>
-        <mp-checkbox wx:else label="肾移植" value="kidneyTransplant"></mp-checkbox>
-        <mp-checkbox wx:if="{{formData.abnormalkidneyFunction.serumCreatinine}}" checked="true" label="血清肌酐大>200umol/L" value="serumCreatinine"></mp-checkbox>
-        <mp-checkbox wx:else label="血清肌酐大>200umol/L" value="serumCreatinine"></mp-checkbox>
-      </mp-checkbox-group>
+      <checkbox-group bindchange="onabnormalkidneyFunctionChange">
+        <label class="weui-cell weui-check__label">
+          <view class="weui-cell__hd">
+            <checkbox disabled="{{mode == 'readonly'}}" value="chronicDialysis" checked="{{formData.abnormalkidneyFunction.chronicDialysis}}" />
+          </view>
+          <view class="weui-cell__bd">慢性透析</view>
+        </label>
+        <label class="weui-cell weui-check__label">
+          <view class="weui-cell__hd">
+            <checkbox disabled="{{mode == 'readonly'}}" value="kidneyTransplant" checked="{{formData.abnormalkidneyFunction.kidneyTransplant}}" />
+          </view>
+          <view class="weui-cell__bd">肾移植</view>
+        </label>
+        <label class="weui-cell weui-check__label">
+          <view class="weui-cell__hd">
+            <checkbox disabled="{{mode == 'readonly'}}" value="serumCreatinine" checked="{{formData.abnormalkidneyFunction.serumCreatinine}}" />
+          </view>
+          <view class="weui-cell__bd">血清肌酐大（C r >200umol/L</view>
+        </label>
+        <label class="weui-cell weui-check__label">
+          <view class="weui-cell__hd">
+            <checkbox value="none" disabled="{{mode == 'readonly'}}" checked="{{formData.abnormalkidneyFunction.none}}" />
+          </view>
+          <view class="weui-cell__bd">以上皆无</view>
+        </label>
+      </checkbox-group>
     </mp-cells>
     <mp-cells title="肝功能异常（多选）">
-      <mp-checkbox-group wx:if="{{mode == 'readonly'}}" prop="abnormalLiverFunction" multi="{{true}}" bindchange="onabnormalLiverFunctionChange">
-        <mp-checkbox wx:if="{{formData.abnormalLiverFunction.chronicLiverDisease}}" disabled="true" checked="true" label="慢性肝病" value="chronicLiverDisease"></mp-checkbox>
-        <mp-checkbox wx:else label="慢性肝病" value="chronicLiverDisease" disabled="true"></mp-checkbox>
-        <mp-checkbox wx:if="{{formData.abnormalLiverFunction.bilirubin}}" disabled="true" checked="true" label="胆红素>2倍且谷草转氨酶/谷丙转氨酶/碱性磷酸酶>3倍" value="bilirubin"></mp-checkbox>
-        <mp-checkbox wx:else label="胆红素>2倍且谷草转氨酶/谷丙转氨酶/碱性磷酸酶>3倍" disabled="true" value="bilirubin"></mp-checkbox>
-      </mp-checkbox-group>
-      <mp-checkbox-group wx:else prop="abnormalLiverFunction" multi="{{true}}" bindchange="onabnormalLiverFunctionChange">
-        <mp-checkbox wx:if="{{formData.abnormalLiverFunction.chronicLiverDisease}}" checked="true" label="慢性肝病" value="chronicLiverDisease"></mp-checkbox>
-        <mp-checkbox wx:else label="慢性肝病" value="chronicLiverDisease"></mp-checkbox>
-        <mp-checkbox wx:if="{{formData.abnormalLiverFunction.bilirubin}}" checked="true" label="胆红素>2倍且谷草转氨酶/谷丙转氨酶/碱性磷酸酶>3倍" value="bilirubin"></mp-checkbox>
-        <mp-checkbox wx:else label="胆红素>2倍且谷草转氨酶/谷丙转氨酶/碱性磷酸酶>3倍" value="bilirubin"></mp-checkbox>
-      </mp-checkbox-group>
+      <checkbox-group bindchange="onabnormalLiverFunctionChange">
+        <label class="weui-cell weui-check__label">
+          <view class="weui-cell__hd">
+            <checkbox disabled="{{mode == 'readonly'}}" value="chronicLiverDisease" checked="{{formData.abnormalLiverFunction.chronicLiverDisease}}" />
+          </view>
+          <view class="weui-cell__bd">慢性肝病</view>
+        </label>
+        <label class="weui-cell weui-check__label">
+          <view class="weui-cell__hd">
+            <checkbox disabled="{{mode == 'readonly'}}" value="bilirubin" checked="{{formData.abnormalLiverFunction.bilirubin}}" />
+          </view>
+          <view class="weui-cell__bd">胆红素（TB IL）>2倍且谷草转氨酶（AS T）/谷丙转氨酶（ALT）/碱性磷酸酶（ALP）>3倍</view>
+        </label>
+        <label class="weui-cell weui-check__label">
+          <view class="weui-cell__hd">
+            <checkbox value="none" disabled="{{mode == 'readonly'}}" checked="{{formData.abnormalkidneyFunction.none}}" />
+          </view>
+          <view class="weui-cell__bd">以上皆无</view>
+        </label>
+      </checkbox-group>
     </mp-cells>
     <mp-cells title="出血（多选）">
-      <mp-checkbox-group wx:if="{{mode == 'readonly'}}" prop="bleeding" multi="{{true}}" bindchange="onbleedingChange">
-        <mp-checkbox wx:if="{{formData.bleeding.historyOfBleeding}}" disabled="true" checked="true" label="出血病史" value="historyOfBleeding"></mp-checkbox>
-        <mp-checkbox wx:else label="出血病史" disabled="true" value="historyOfBleeding"></mp-checkbox>
-        <mp-checkbox wx:if="{{formData.bleeding.bleedingConstitution}}" disabled="true" checked="true" label="出血体质" value="bleedingConstitution"></mp-checkbox>
-        <mp-checkbox wx:else label="出血体质" disabled="true" value="bleedingConstitution"></mp-checkbox>
-        <mp-checkbox wx:if="{{formData.bleeding.anemia}}" disabled="true" checked="true" label="贫血" value="anemia"></mp-checkbox>
-        <mp-checkbox wx:else label="贫血" disabled="true" value="anemia"></mp-checkbox>
-      </mp-checkbox-group>
-      <mp-checkbox-group wx:else prop="bleeding" multi="{{true}}" bindchange="onbleedingChange">
-        <mp-checkbox wx:if="{{formData.bleeding.historyOfBleeding}}" checked="true" label="出血病史" value="historyOfBleeding"></mp-checkbox>
-        <mp-checkbox wx:else label="出血病史" value="historyOfBleeding"></mp-checkbox>
-        <mp-checkbox wx:if="{{formData.bleeding.bleedingConstitution}}" checked="true" label="出血体质" value="bleedingConstitution"></mp-checkbox>
-        <mp-checkbox wx:else label="出血体质" value="bleedingConstitution"></mp-checkbox>
-        <mp-checkbox wx:if="{{formData.bleeding.anemia}}" checked="true" label="贫血" value="anemia"></mp-checkbox>
-        <mp-checkbox wx:else label="贫血" value="anemia"></mp-checkbox>
-      </mp-checkbox-group>
+      <checkbox-group bindchange="onbleedingChange">
+        <label class="weui-cell weui-check__label">
+          <view class="weui-cell__hd">
+            <checkbox disabled="{{mode == 'readonly'}}" value="historyOfBleeding" checked="{{formData.bleeding.historyOfBleeding}}" />
+          </view>
+          <view class="weui-cell__bd">出血病史</view>
+        </label>
+        <label class="weui-cell weui-check__label">
+          <view class="weui-cell__hd">
+            <checkbox disabled="{{mode == 'readonly'}}" value="bleedingConstitution" checked="{{formData.bleeding.bleedingConstitution}}" />
+          </view>
+          <view class="weui-cell__bd">出血体质</view>
+        </label>
+        <label class="weui-cell weui-check__label">
+          <view class="weui-cell__hd">
+            <checkbox disabled="{{mode == 'readonly'}}" value="anemia" checked="{{formData.bleeding.anemia}}" />
+          </view>
+          <view class="weui-cell__bd">贫血</view>
+        </label>
+        <label class="weui-cell weui-check__label">
+          <view class="weui-cell__hd">
+            <checkbox value="none" disabled="{{mode == 'readonly'}}" checked="{{formData.bleeding.none}}" />
+          </view>
+          <view class="weui-cell__bd">以上皆无</view>
+        </label>
+      </checkbox-group>
     </mp-cells>
     <mp-cells title="INR值不稳定（多选）">
-      <mp-checkbox-group wx:if="{{mode == 'readonly'}}" prop="inrUnstable" multi="{{true}}" bindchange="oninrUnstableChange">
-        <mp-checkbox wx:if="{{formData.inrUnstable.volatile}}" disabled="true" checked="true" label="易变" value="volatile"></mp-checkbox>
-        <mp-checkbox wx:else label="易变" disabled="true" value="volatile"></mp-checkbox>
-        <mp-checkbox wx:if="{{formData.inrUnstable.high}}" disabled="true" checked="true" label="偏高" value="high"></mp-checkbox>
-        <mp-checkbox wx:else label="偏高" disabled="true" value="high"></mp-checkbox>
-        <mp-checkbox wx:if="{{formData.inrUnstable.outOfRange}}" disabled="true" checked="true" label="达不到治疗范围（<60%）" value="outOfRange"></mp-checkbox>
-        <mp-checkbox wx:else label="达不到治疗范围（<60%）" disabled="true" value="outOfRange"></mp-checkbox>
-      </mp-checkbox-group>
-      <mp-checkbox-group wx:else prop="bleeding" multi="{{true}}" bindchange="oninrUnstableChange">
-        <mp-checkbox wx:if="{{formData.inrUnstable.volatile}}" checked="true" label="易变" value="volatile"></mp-checkbox>
-        <mp-checkbox wx:else label="易变" value="volatile"></mp-checkbox>
-        <mp-checkbox wx:if="{{formData.inrUnstable.high}}" checked="true" label="偏高" value="high"></mp-checkbox>
-        <mp-checkbox wx:else label="偏高" value="high"></mp-checkbox>
-        <mp-checkbox wx:if="{{formData.inrUnstable.outOfRange}}" checked="true" label="达不到治疗范围（<60%）" value="outOfRange"></mp-checkbox>
-        <mp-checkbox wx:else label="达不到治疗范围（<60%）" value="outOfRange"></mp-checkbox>
-      </mp-checkbox-group>
+      <checkbox-group bindchange="oninrUnstableChange">
+        <label class="weui-cell weui-check__label">
+          <view class="weui-cell__hd">
+            <checkbox disabled="{{mode == 'readonly'}}" value="volatile" checked="{{formData.inrUnstable.volatile}}" />
+          </view>
+          <view class="weui-cell__bd">易变</view>
+        </label>
+        <label class="weui-cell weui-check__label">
+          <view class="weui-cell__hd">
+            <checkbox disabled="{{mode == 'readonly'}}" value="high" checked="{{formData.inrUnstable.high}}" />
+          </view>
+          <view class="weui-cell__bd">偏高（INR值>3）</view>
+        </label>
+        <label class="weui-cell weui-check__label">
+          <view class="weui-cell__hd">
+            <checkbox disabled="{{mode == 'readonly'}}" value="outOfRange" checked="{{formData.inrUnstable.outOfRange}}" />
+          </view>
+          <view class="weui-cell__bd">达不到治疗范围（INR值小于1.2）</view>
+        </label>
+        <label class="weui-cell weui-check__label">
+          <view class="weui-cell__hd">
+            <checkbox value="none" disabled="{{mode == 'readonly'}}" checked="{{formData.inrUnstable.none}}" />
+          </view>
+          <view class="weui-cell__bd">以上皆无</view>
+        </label>
+      </checkbox-group>
     </mp-cells>
     <mp-cells title="药物（多选）">
-      <mp-checkbox-group wx:if="{{mode == 'readonly'}}" prop="drugs" multi="{{true}}" bindchange="ondrugsChange">
-        <mp-checkbox wx:if="{{formData.drugs.antiplateletDrugs}}" disabled="true" checked="true" label="抗血小板药物" value="antiplateletDrugs"></mp-checkbox>
-        <mp-checkbox wx:else label="抗血小板药物" disabled="true" value="antiplateletDrugs"></mp-checkbox>
-        <mp-checkbox wx:if="{{formData.drugs.nonsteroidalDrugs}}" disabled="true" checked="true" label="非甾体类药物" value="nonsteroidalDrugs"></mp-checkbox>
-        <mp-checkbox wx:else label="非甾体类药物" disabled="true" value="nonsteroidalDrugs"></mp-checkbox>
-        <mp-checkbox wx:if="{{formData.drugs.alcoholism}}" disabled="true" checked="true" label="嗜酒" value="alcoholism"></mp-checkbox>
-        <mp-checkbox wx:else label="嗜酒" disabled="true" value="alcoholism"></mp-checkbox>
-      </mp-checkbox-group>
-      <mp-checkbox-group wx:else prop="drags" multi="{{true}}" bindchange="ondragsChange">
-        <mp-checkbox wx:if="{{formData.drugs.antiplateletDrugs}}" checked="true" label="抗血小板药物" value="antiplateletDrugs"></mp-checkbox>
-        <mp-checkbox wx:else label="抗血小板药物" value="antiplateletDrugs"></mp-checkbox>
-        <mp-checkbox wx:if="{{formData.drugs.nonsteroidalDrugs}}" checked="true" label="非甾体类药物" value="nonsteroidalDrugs"></mp-checkbox>
-        <mp-checkbox wx:else label="非甾体类药物" value="nonsteroidalDrugs"></mp-checkbox>
-        <mp-checkbox wx:if="{{formData.drugs.alcoholism}}" checked="true" label="嗜酒" value="alcoholism"></mp-checkbox>
-        <mp-checkbox wx:else label="嗜酒" value="alcoholism"></mp-checkbox>
-      </mp-checkbox-group>
+      <checkbox-group bindchange="ondrugsChange">
+        <label class="weui-cell weui-check__label">
+          <view class="weui-cell__hd">
+            <checkbox disabled="{{mode == 'readonly'}}" value="antiplateletDrugs" checked="{{formData.drugs.antiplateletDrugs}}" />
+          </view>
+          <view class="weui-cell__bd">抗血小板药物</view>
+        </label>
+        <label class="weui-cell weui-check__label">
+          <view class="weui-cell__hd">
+            <checkbox disabled="{{mode == 'readonly'}}" value="nonsteroidalDrugs" checked="{{formData.drugs.nonsteroidalDrugs}}" />
+          </view>
+          <view class="weui-cell__bd">非甾体类药物</view>
+        </label>
+        <label class="weui-cell weui-check__label">
+          <view class="weui-cell__hd">
+            <checkbox disabled="{{mode == 'readonly'}}" value="alcoholism" checked="{{formData.drugs.alcoholism}}" />
+          </view>
+          <view class="weui-cell__bd">嗜酒</view>
+        </label>
+        <label class="weui-cell weui-check__label">
+          <view class="weui-cell__hd">
+            <checkbox value="none" disabled="{{mode == 'readonly'}}" checked="{{formData.drugs.none}}" />
+          </view>
+          <view class="weui-cell__bd">以上皆无</view>
+        </label>
+      </checkbox-group>
     </mp-cells>
   </mp-form>
   <view slot="button">
     <button wx:if="{{mode != 'readonly'}}" class="weui-btn" type="primary" bindtap="submitForm">确定</button>
   </view>
   <view wx:if="{{mode == 'readonly'}}">
-    <View class="score">您的当前评分：{{score}}</View>
-    <view class="score">危险评级</view>
-    <view wx:if="{{ score < 3 }}" class="lowRisk">低危</view>
-    <view wx:if="{{ score >= 3 }}" class="extremeHighRisk">极高危（易发生出血，抗凝抗血小板药物使用需谨慎）</view>
+    <view class="score">危险评级：</view>
+    <view wx:if="{{ score <= 2 }}">
+      <View class="score">您的当前评分：{{score}}</View>
+      <view class="score">危险评级 :（低风险出血患者）结合房颤血栓评分优先进行抗凝，同时观察出血情况</view>
+      <view>
+        <view class="riskBar">
+          <view class="riskMark active"></view>
+          <view class="riskMark"></view>
+        </view>
+        <view class="riskBar">
+          <view class="lowRisk">低危</view>
+          <view class="highRisk">高危</view>
+        </view>
+      </view>
+    </view>
+    <view wx:if="{{ score >= 3 }}">
+      <View class="score">您的当前评分：{{score}}</View>
+      <view class="score">危险评级 :（高风险出血患者）抗凝抗血小板药物使用需谨慎</view>
+      <view>
+        <view class="riskBar">
+          <view class="riskMark"></view>
+          <view class="riskMark active"></view>
+        </view>
+        <view class="riskBar">
+          <view class="lowRisk">低危</view>
+          <view class="highRisk">高危</view>
+        </view>
+      </view>
+    </view>
   </view>
 </mp-form-page>
